<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.students.RegisterStudentFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_add_galery"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_photo_white_48dp"
                android:tint="@color/menu1"
                app:layout_constraintLeft_toRightOf="@+id/iv_add_photo"
                app:layout_constraintTop_toBottomOf="@+id/ib_take_photo" />

            <ImageButton
                android:id="@+id/ib_take_photo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_a_photo_white_48dp"
                android:tint="@color/menu2"
                app:layout_constraintLeft_toRightOf="@+id/iv_add_photo"
                app:layout_constraintTop_toBottomOf="@+id/ib_remove_photo" />

            <ImageButton
                android:id="@+id/ib_remove_photo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_delete"
                android:scaleType="fitXY"
                android:src="@drawable/ic_delete_sweep_white_48dp"
                android:tint="@color/menu4"
                app:layout_constraintLeft_toRightOf="@+id/iv_add_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/description_photo"
                android:scaleType="fitXY"
                android:src="@drawable/ic_account_circle_black_48dp"
                android:tint="@color/menu3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_add_photo" />

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/iv_add_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/iv_add_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

            <Button
                android:id="@+id/ib_student_save"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/shape_btn_save"
                android:contentDescription="@string/description_save"
                android:scaleType="fitXY"
                android:text="@string/text_btn_save"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/ib_cancel_student"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/shape_btn_cancel"
                android:contentDescription="@string/description_cancel"
                android:scaleType="fitXY"
                android:src="@drawable/ic_clear_white_48dp"
                android:text="@string/btn_cancel"
                android:textColor="@android:color/white"
                android:tint="@color/menu4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>